asupersync-macros/tests/compile_fail/spawn_scope_name_without_future.rs
use asupersync_macros::spawn;

fn main() {
    let _ = spawn!(scope, "worker");
}
